# a-dreadful-time

./: Cargo.toml
OGSharingService/OGSharingService/: AppDelegate.h  AppDelegate.m  main.m
OGSharingService/OGSharingService.xcodeproj/: project.pbxproj
built_products/: OGSharingService
src/: main.rs  nssharingservice.rs
templates/: email.txt
