[package]
name = "a-dreadful-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
core-foundation = "0.9.3"
cocoa = "0.24.0"
minijinja = { version = "0.15.0", features = ["source"] }
objc = "0.2.7"
